--- a/templates/compose/gateway.yaml.erb
+++ b/templates/compose/gateway.yaml.erb
@@ -11,7 +11,7 @@ services:
     command: /usr/local/bin/envoy --v2-config-only -l info -c /etc/envoy/envoy.yaml
     labels:
       traefik.enable: true
-      traefik.frontend.rule: "PathPrefix:/api/, /admin, /assets/;Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
+      traefik.frontend.rule: "PathPrefix:/api/, /admin;Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
       traefik.default.port: 8099
       traefik.default.protocol: http
       traefik.wss.frontend.rule: "Host:<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>"
